[gd_scene load_steps=7 format=3 uid="uid://dyy1lswl3dow8"]

[ext_resource type="Script" path="res://scripts/level/xp_gem.gd" id="1_8old4"]
[ext_resource type="Texture2D" uid="uid://d3bkar10djih5" path="res://art/gem.png" id="2_wsebg"]
[ext_resource type="AudioStream" uid="uid://ck6ivripkirab" path="res://art/sfx/twinkle_sfx.mp3" id="3_g5cy5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h7nyk"]
size = Vector2(56, 42)

[sub_resource type="Animation" id="Animation_ivdsy"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 2, 4, 6, 8, 10, 12, 14, 16, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r7548"]
_data = {
"idle": SubResource("Animation_ivdsy")
}

[node name="XpGem" type="Area2D"]
script = ExtResource("1_8old4")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_wsebg")
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 6)
shape = SubResource("RectangleShape2D_h7nyk")
debug_color = Color(0.929412, 0.0862745, 0.619608, 0.207843)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r7548")
}

[node name="CollectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_g5cy5")
volume_db = -9.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="finished" from="CollectSFX" to="." method="_on_collect_sfx_finished"]
